
Fixed:  magerr now only attempts to plot error ellipses when the ellipse has area, i.e. both xlo and xhi must be above 0. Before it would plot lots of ellipses with 0 area, i.e. a point, and this could take a lot of unnecessary time.

Feature: magerr will now draw an error bar when xlo or xhi is 0 and corxy has been provided, i.e. since it can't draw an ellipse with width 0 it draws an error bar instead.

Fixes: All magplot options now passed onto magaxis. This was suggested by Raphael Felber, and was a change I had long been meaning to make.

Feature: side=FALSE in magplot will now not plot any sides (in this case the user could just have used plot, but adding this option makes scripting easier)

License: Changed to GPL-3 after a user request.

v 1.9.5 (not on CRAN)

Feature: Added magimage

Feature: Added magtri function to make nice triangle plots of MCMC psoterior chains with a simple high level interface.

Feature: Added projected coordinate plotting via magproj.

Feature: Added function magband.

Feature: Added background grid options for magaxis and magplot.

Feature: Added Nbins output to magrun. This effectively produces a histogram counts output for the final bin limits.

Feature: magplot dots (...) now also get sent to magaxis -> axis, previously they only went to plot.

Fix: cex.lab wasn't being passed to magaxis, now it is., i.e. par(cex.lab=2) will work.

Fix: doc typos

Feature: Extended the contours for magcon silently so they extend over the full plot window.

Feature: You can now parse a two column matrix or data.frame to x in magcon (rather than having to specify y separately).

Fix: Now parse 'tick' through to magaxis.

--

TO DO:

FEATURE: Add better in-plot legends.


