@@ -1,5 +1,5 @@
 magaxis <-
-function(side=1:2, majorn=5, minorn=5, tcl=0.5, ratio=0.5, labels=TRUE, unlog='Auto', mgp=c(2,0.5,0), mtline=2, xlab=NULL, ylab=NULL, crunch=TRUE, logpretty=TRUE, prettybase=10, hersh=FALSE, family='sans', frame.plot=FALSE, usepar=FALSE, grid=FALSE, grid.col='grey', grid.lty=1, grid.lwd=1, ...){
+function(side=1:2, majorn=5, minorn=5, tcl=0.5, ratio=0.5, labels=TRUE, unlog='Auto', mgp=c(2,0.5,0), mtline=2, xlab=NULL, ylab=NULL, crunch=TRUE, logpretty=TRUE, prettybase=10, powbase=10, hersh=FALSE, family='sans', frame.plot=FALSE, usepar=FALSE, grid=FALSE, grid.col='grey', grid.lty=1, grid.lwd=1, ...){
 dots=list(...)
 dotskeep=c('cex.axis', 'col.axis', 'font.axis', 'xaxp', 'yaxp', 'tck', 'las', 'fg', 'xpd', 'xaxt', 'yaxt', 'col.ticks', 'lwd.ticks', 'tick')
 if(length(dots)>0){
@@ -12,6 +12,7 @@ labelslist=labels
 crunchlist=crunch
 logprettylist=logpretty
 prettybaselist=prettybase
+powbaselist=powbase
 gridlist=grid
 if(length(majorn)==1 & length(side)>1){majornlist=rep(majorn,length(side))}
 if(length(minorn)==1 & length(side)>1){minornlist=rep(minorn,length(side))}
@@ -20,6 +21,7 @@ if(length(labels)==1 & length(side)>1){labelslist=rep(labels,length(side))}
 if(length(crunch)==1 & length(side)>1){crunchlist=rep(crunch,length(side))}
 if(length(logpretty)==1 & length(side)>1){logprettylist=rep(logpretty,length(side))}
 if(length(prettybase)==1 & length(side)>1){prettybaselist=rep(prettybase,length(side))}
+if(length(powbase)==1 & length(side)>1){powbaselist=rep(powbase,length(side))}
 if(length(grid)==1 & length(side)>1){gridlist=rep(grid,length(side))}
 if(unlog[1]=='x'){unloglist=rep(FALSE,length(side));unloglist[side %in% c(1,3)]=TRUE}
 if(unlog[1]=='y'){unloglist=rep(FALSE,length(side));unloglist[side %in% c(2,4)]=TRUE}
@@ -32,6 +34,7 @@ if(length(labelslist) != length(side)){stop('Length of labels vector mismatches 
 if(length(crunchlist) != length(side)){stop('Length of crunch vector mismatches number of axes!')}
 if(length(logprettylist) != length(side)){stop('Length of logpretty vector mismatches number of axes!')}
 if(length(prettybaselist) != length(side)){stop('Length of prettybase vector mismatches number of axes!')}
+if(length(powbaselist) != length(side)){stop('Length of powbase vector mismatches number of axes!')}
 if(length(gridlist) != length(side)){stop('Length of grid vector mismatches number of axes!')}
 
 currentfamily=par('family')
@@ -54,6 +57,7 @@ for(i in 1:length(side)){
 		crunch=crunchlist[i]
 		logpretty=logprettylist[i]
     prettybase=prettybaselist[i]
+    powbase=powbaselist[i]
     grid=gridlist[i]
   		lims=par("usr")
   		if(currentside %in% c(1,3)){
@@ -67,20 +71,20 @@ for(i in 1:length(side)){
         if(logged | unlog){usemultloc=(10^lims[2])/(10^lims[1])<50}else{usemultloc=F}
         	  		
   		if(unlog){
-        sci.tick=maglab(10^lims,n=majorn,log=T,exptext=T,crunch=crunch,logpretty=logpretty,usemultloc=usemultloc,prettybase=prettybase, hersh=hersh)
-        major.ticks = log10(sci.tick$tickat)
+        sci.tick=maglab(10^lims,n=majorn,log=T,exptext=T,crunch=crunch,logpretty=logpretty,usemultloc=usemultloc,prettybase=prettybase, powbase=powbase, hersh=hersh)
+        major.ticks = log(sci.tick$tickat,powbase)
   		  uselabels = sci.tick$exp
-  		  labloc = log10(sci.tick$labat)
+  		  labloc = log(sci.tick$labat,powbase)
         if(usemultloc==F){
-        minors = log10(pretty(10^major.ticks[1:2],minorn+2))-major.ticks[1]
+        minors = log(pretty(powbase^major.ticks[1:2],minorn+2),powbase)-major.ticks[1]
         }
  		}
  		if(logged & unlog==F){
- 		  sci.tick=maglab(10^lims, n=majorn, log=T, exptext=F, crunch=crunch, logpretty=logpretty,usemultloc=usemultloc, prettybase=prettybase, hersh=hersh)
- 		  major.ticks = log10(sci.tick$tickat)
+ 		  sci.tick=maglab(10^lims, n=majorn, log=T, exptext=F, crunch=crunch, logpretty=logpretty,usemultloc=usemultloc, prettybase=prettybase, powbase=powbase, hersh=hersh)
+ 		  major.ticks = log(sci.tick$tickat,powbase)
   		uselabels = sci.tick$exp
-  		labloc = log10(sci.tick$labat)
- 		  if(usemultloc==F){minors = log10(pretty(10^major.ticks[1:2],minorn+2))-major.ticks[1]}
+  		labloc = log(sci.tick$labat,powbase)
+ 		  if(usemultloc==F){minors = log(pretty(powbase^major.ticks[1:2],minorn+2),powbase)-major.ticks[1]}
  		}
 
  		if(logged==F & unlog==F){
@@ -94,14 +98,14 @@ for(i in 1:length(side)){
     if(grid){
       if(currentside==1){
         if(logged){
-          abline(v=10^labloc, col=grid.col, lty=grid.lty, lwd=grid.lty)
+          abline(v=powbase^labloc, col=grid.col, lty=grid.lty, lwd=grid.lty)
         }else{
           abline(v=labloc, col=grid.col, lty=grid.lty, lwd=grid.lty)
         }
       }
       if(currentside==2){
         if(logged){
-          abline(h=10^labloc, col=grid.col, lty=grid.lty, lwd=grid.lty)
+          abline(h=powbase^labloc, col=grid.col, lty=grid.lty, lwd=grid.lty)
         }else{
           abline(h=labloc, col=grid.col, lty=grid.lty, lwd=grid.lty)
         }
@@ -109,8 +113,8 @@ for(i in 1:length(side)){
     }
 
  		if(logged){
- 		  do.call("axis", c(list(side=currentside,at=10^major.ticks,tcl=tcl,labels=FALSE,mgp=mgp),dots))
- 		  #axis(side=currentside,at=10^major.ticks,tcl=tcl,labels=FALSE,mgp=mgp,col=col.ticks,...)
+ 		  do.call("axis", c(list(side=currentside,at=powbase^major.ticks,tcl=tcl,labels=FALSE,mgp=mgp),dots))
+ 		  #axis(side=currentside,at=powbase^major.ticks,tcl=tcl,labels=FALSE,mgp=mgp,col=col.ticks,...)
  		}else{
  		  do.call("axis", c(list(side=currentside,at=major.ticks,tcl=tcl,labels=FALSE,mgp=mgp),dots))
  		  #axis(side=currentside,at=major.ticks,tcl=tcl,labels=FALSE,mgp=mgp,col=col.ticks,...)
@@ -118,8 +122,8 @@ for(i in 1:length(side)){
  		
     if(labels){
       if(logged){
-        do.call("axis", c(list(side=currentside,at=10^labloc,tick=F,labels=uselabels,mgp=mgp),dots))
-        #axis(side=currentside,at=10^labloc,tick=F,labels=uselabels,mgp=mgp,...)
+        do.call("axis", c(list(side=currentside,at=powbase^labloc,tick=F,labels=uselabels,mgp=mgp),dots))
+        #axis(side=currentside,at=powbase^labloc,tick=F,labels=uselabels,mgp=mgp,...)
       }else{
         do.call("axis", c(list(side=currentside,at=labloc,tick=F,labels=uselabels,mgp=mgp),dots))
         #axis(side=currentside,at=labloc,tick=F,labels=uselabels,mgp=mgp,...)
@@ -130,8 +134,8 @@ for(i in 1:length(side)){
       minors = minors[-c(1,length(minors))]
       minor.ticks = c(outer(minors, major.ticks, `+`))
       if(logged){
-        do.call("axis", c(list(side=currentside,at=10^minor.ticks,tcl=tcl*ratio,labels=FALSE,mgp=mgp),dots))
-        #axis(side=currentside,at=10^minor.ticks,tcl=tcl*ratio,labels=FALSE,col=col.ticks,...)
+        do.call("axis", c(list(side=currentside,at=powbase^minor.ticks,tcl=tcl*ratio,labels=FALSE,mgp=mgp),dots))
+        #axis(side=currentside,at=powbase^minor.ticks,tcl=tcl*ratio,labels=FALSE,col=col.ticks,...)
       }else{
         do.call("axis", c(list(side=currentside,at=minor.ticks,tcl=tcl*ratio,labels=FALSE,mgp=mgp),dots))
         #axis(side=currentside,at=minor.ticks,tcl=tcl*ratio,labels=FALSE,col=col.ticks,...)
