@@ -1,31 +1,31 @@
 maglab <-
-function(lims, n, log=FALSE, exptext=TRUE, crunch=TRUE, logpretty=TRUE, usemultloc=FALSE, multloc=c(1,2,5), prettybase=10, hersh=FALSE, trim=FALSE){
+function(lims, n, log=FALSE, exptext=TRUE, crunch=TRUE, logpretty=TRUE, usemultloc=FALSE, multloc=c(1,2,5), prettybase=10, powbase=10, hersh=FALSE, trim=FALSE){
 if(usemultloc & log==F){stop('If using multloc then log must be TRUE!')}
 lims=lims/(prettybase/10)
-if(log & usemultloc==F){lims=log10(lims)}
+if(log & usemultloc==F){lims=log(lims, powbase)}
 if(usemultloc==F){if(missing(n)){labloc=pretty(lims)}else{labloc=pretty(lims,n)}}
 if(log){
     if(usemultloc==F){
 	    labloc=labloc+log10(prettybase/10)
-	    labloc=labloc[round(labloc -log10(prettybase/10),10) %% 1==0]
+	    labloc=labloc[round(labloc -log(prettybase/10,powbase),10) %% 1==0]
       if(min(labloc)>lims[1]){labloc=c(min(labloc)-1,labloc)}
 	    if(max(labloc)<lims[2]){labloc=c(labloc,max(labloc)+1)}
       labloc=round(labloc,10)
-      labloc=10^labloc
+      labloc=powbase^labloc
       tickloc=labloc
 	}
     if(usemultloc){
         labloc={}
-        for(i in 1:length(multloc)){labloc=c(labloc,multloc[i]*10^seq(ceiling(log10(lims[1]))-1,floor(log10(lims[2]))+1))}
+        for(i in 1:length(multloc)){labloc=c(labloc,multloc[i]*powbase^seq(ceiling(log(lims[1],powbase))-1,floor(log(lims[2],powbase))+1))}
         labloc=sort(labloc)
         tickloc={}
-        for(i in 1:9){tickloc=c(tickloc,i*10^seq(ceiling(log10(lims[1]))-1,floor(log10(lims[2]))+1))}
+        for(i in 1:9){tickloc=c(tickloc,i*powbase^seq(ceiling(log(lims[1],powbase))-1,floor(log(lims[2],powbase))+1))}
         tickloc=sort(tickloc)
     }
     #annoyingly I get weird issues for some numbers (e.g 0.00035) if they are in an otherwise scientific format list, and this behaves differently to the formatting on the actual plots. Only way round this is to format each number individually.
     char={}
     if(exptext){for(i in 1:length(labloc)){char=c(char,format(labloc[i]))}}
-    if(! exptext){for(i in 1:length(labloc)){char=c(char,format(log10(labloc[i])))}}
+    if(! exptext){for(i in 1:length(labloc)){char=c(char,format(log(labloc[i],powbase)))}}
 }else{
 labloc=labloc*(prettybase/10)
 tickloc=labloc
@@ -33,7 +33,7 @@ char={}
 for(i in 1:length(labloc)){char=c(char,format(labloc[i]))}
 }
 
-if(log & usemultloc==F){lims=10^(lims)}
+if(log & usemultloc==F){lims=powbase^(lims)}
 if(trim){
 char=char[labloc>=lims[1] & labloc<=lims[2]]
 labloc=labloc[labloc>=lims[1] & labloc<=lims[2]]
@@ -72,5 +72,5 @@ check=grep('1*x*',char)
     }
 }
 if(hersh){exp=char}else{exp=parse(text=char)}
-return=list(tickat=tickloc,labat=labloc,exp=exp)
+return(list(tickat=tickloc,labat=labloc,exp=exp))
 }
