@@ -163,6 +163,8 @@ Feature: You can now parse a two column matrix or data.frame to x in magcon (rat
 
 Fix: Now parse 'tick' through to magaxis.
 
+Feature: Added powbase option to allow log axes to be labelled with powers of e.g. 2 (1,2,4,8 etc) rather than only 10.
+
 --
 
 TO DO:
